Add markdown compiler using markdown helper

--- a/source/templates/partials/_description.html.erb
+++ b/source/templates/partials/_description.html.erb
@@ -3,5 +3,5 @@
     <h2><%= t('project.description.few-words') %></h2>
     <a href="<%= project.url %>"><%= t('project.description.website') %></a>
   </div>
-  <p><%= project[locale.to_s].description %></p>
+  <p><%= markdown project[locale.to_s].description %></p>
 </div>
