--- a/source/stylesheets/project/_medium.scss
+++ b/source/stylesheets/project/_medium.scss
@@ -1,13 +1,21 @@
 .medium {
   position: relative;
   min-height: 250px;
+  overflow: hidden;
   svg {
     position: absolute;
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
+    min-height: 100%;
+    z-index: -1;
     circle {
       fill: rgba($grey, .25);
     }
+  }
+  img {
+    position: absolute;
+    width: 40%;
+    max-width: 600px;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 4em;
   }
 }
