--- a/source/stylesheets/project/_medium.scss
+++ b/source/stylesheets/project/_medium.scss
@@ -10,12 +10,42 @@
       fill: rgba($grey, .25);
     }
   }
-  img {
+  .content {
+    display: flex;
     position: absolute;
-    width: 40%;
-    max-width: 600px;
+    justify-content: space-between;
+    align-items: flex-end;
     top: 50%;
-    transform: translateY(-50%);
-    left: 4em;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 80%;
+    &:hover .case-study:after {
+      width: 80%;
+    }
+  }
+  .case-study {
+    font-weight: bold;
+    font-size: 1.2em;
+    &:after {
+      content: '';
+      display: block;
+      width: 65%;
+      height: 2px;
+      margin-top: 5px;
+      background-color: $grey;
+      border: none;
+      float: right;
+      transition: width .2s;
+    }
+    @media #{$littlePhone} {
+      display: none;
+    }
+  }
+  img {
+    width: 50%;
+    max-width: 600px;
+    @media #{$littlePhone} {
+      width: 70%;
+    }
   }
 }
