--- a/source/templates/partials/_medium.html.erb
+++ b/source/templates/partials/_medium.html.erb
@@ -1,5 +1,5 @@
 <div class="medium">
-  <% link_to project.medium do %>
+  <% link_to project.medium, target: '_blank' do %>
     <svg id="repulsion" viewBox="0 0 <%= width %> <%= height %>" xmlns="http://www.w3.org/2000/svg" version="1.1" width="<%= width %>" height="<%= height %>">
       <% (1..widthDots).to_a.each do |x| %>
         <% (1..heightDots).to_a.each do |y| %>
@@ -7,6 +7,9 @@
         <% end %>
       <% end %>
     </svg>
-    <%= image_tag "icons/medium/large.svg" %>
+    <span class="content">
+      <%= image_tag "icons/medium/large.svg" %>
+      <span class="case-study">case study</span>
+    </span>
   <% end %>
 </div>
