--- a/source/stylesheets/misc/_vars.scss
+++ b/source/stylesheets/misc/_vars.scss
@@ -3,6 +3,7 @@ $color-secondary: #EA4C64;
 $color-background: #FFF;
 $grey: #6B6B6B;
 $white: #FFF;
+$black: #000;
 
 $font-primary: 'Menlo', 'Helvetica Neue', 'Helvetica', sans-serif;
 
