--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -27,7 +27,9 @@
     <!-- Google Webmaster Tools -->
     <meta name="google-site-verification" content="<%= data.meta.google %>" />
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/turbolinks/5.1.1/turbolinks.js" type="text/javascript"></script>
+    <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/turbolinks/5.1.1/turbolinks.js" %>
+    <%= javascript_include_tag "https://cdn.rawgit.com/mzdr/fluffy.js/develop/dist/fluffy.min.js" %>
+    <%= stylesheet_link_tag "https://cdn.rawgit.com/mzdr/fluffy.js/develop/dist/fluffy.min.css" %>
     <%= stylesheet_link_tag "application" %>
   </head>
   <body>
