--- a/source/stylesheets/application.css.scss
+++ b/source/stylesheets/application.css.scss
@@ -7,6 +7,23 @@ body {
   font-family: $font-primary;
 }
 
+h1 {
+  position: relative;
+  display: inline-block;
+  font-style: italic;
+  color: rgba($grey, .75);
+  &:after {
+    content: '';
+    position: relative;
+    display: block;
+    height: 5px;
+    width: 45%;
+    margin: 1em 0 1.8em;
+    background-color: $color-secondary;
+    border: none;
+  }
+}
+
 a {
   text-decoration: none;
   color: inherit;
