--- a/source/stylesheets/pages/_about.scss
+++ b/source/stylesheets/pages/_about.scss
@@ -3,22 +3,6 @@
   margin: 0 auto;
   .hello {
     display: flex;
-    h1 {
-      position: relative;
-      display: inline-block;
-      font-style: italic;
-      color: rgba($grey, .75);
-      &:after {
-        content: '';
-        position: relative;
-        display: block;
-        height: 5px;
-        width: 45%;
-        margin: 1em 0 1.8em;
-        background-color: $color-secondary;
-        border: none;
-      }
-    }
     p {
       margin-bottom: 1.4em;
       font-size: 1.25em;
@@ -60,6 +44,60 @@
       &:last-child {
         padding-right: 6em;
       }
+    }
+  }
+  .socials {
+    position: absolute;
+    display: inline-block;
+    top: 0;
+    right: 0;
+    margin: 5em;
+    transform-origin: top right;
+    transform: rotate(90deg) translateX(100%);
+    font-size: .813em;
+    li {
+      display: inline-block;
+      margin-right: 1.5em;
+      &:hover {
+        color: $color-secondary;
+      }
+    }
+    .main + span {
+      opacity: 0;
+      display: none;
+      cursor: pointer;
+    }
+    .email:hover {
+      color: $grey;
+      .main {
+        opacity: 0;
+        display: none;
+      }
+      .main + span {
+        opacity: 1;
+        display: inherit;
+        em:hover,
+        a:hover {
+          color: $color-secondary;
+        }
+      }
+    }
+    @media #{$classicScreen} {
+      margin-right: 3em;
+    }
+    @media #{$classicPhone} {
+      position: relative;
+      top: inherit;
+      left: inherit;
+      transform: inherit;
+      margin-left: 0;
+    }
+    @media #{$socialsHeight} {
+      position: relative;
+      top: inherit;
+      left: inherit;
+      transform: inherit;
+      margin-left: 0;
     }
   }
   @media #{$classicTablet} {
