Fix front problem on homepage

--- a/source/stylesheets/pages/homepage/_projects.scss
+++ b/source/stylesheets/pages/homepage/_projects.scss
@@ -1,6 +1,7 @@
 #projects {
   position: relative;
-  min-height: 100vh;
+  min-height: 550px;
+  height: 100vh;
   margin-left: 25%;
   h2 {
     display: inline-block;
