Remove turbolinks, fix CSS bugs and loader refork

--- a/source/localizable/about.html.erb
+++ b/source/localizable/about.html.erb
@@ -30,7 +30,7 @@ slug: about
     <li class="email">
       <a href="#" class="main">Email</a>
       <span>
-        <em class="copy-email"><%= t('about.email.copy') %></em> -&nbsp;
+        <em class="copy-email"><%= t('about.email.copy') %></em> -
         <%= mail_to 'bastienrobert@outlook.com', t('about.email.send') %>
       </span>
     </li>
