--- a/source/stylesheets/misc/_loader.scss
+++ b/source/stylesheets/misc/_loader.scss
@@ -26,6 +26,9 @@
   &.visible {
     display: block;
     opacity: 1;
+    #progress {
+      animation: loader 2s;
+    }
   }
 }
 .turbolinks-progress-bar {
