--- a/source/stylesheets/pages/homepage/_projects.scss
+++ b/source/stylesheets/pages/homepage/_projects.scss
@@ -69,7 +69,7 @@
       opacity: 0;
     }
     .pi-title {
-      position: fixed;
+      position: absolute;
       font-size: 13.75em;
       font-weight: 900;
       font-style: italic;
@@ -84,8 +84,8 @@
       }
     }
     .pi-svg {
-      position: fixed;
-      width: 25%;
+      position: absolute;
+      width: 35%;
       max-width: 500px;
       top: 50%;
       right: 5em;
