--- a/source/stylesheets/pages/_about.scss
+++ b/source/stylesheets/pages/_about.scss
@@ -10,6 +10,9 @@
       &:last-child {
         margin-bottom: 0;
       }
+      a {
+        color: $color-secondary;
+      }
     }
     .image {
       width: 30%;
