--- a/source/stylesheets/pages/homepage/_projects.scss
+++ b/source/stylesheets/pages/homepage/_projects.scss
@@ -69,7 +69,7 @@
       opacity: 0;
     }
     .pi-title {
-      position: absolute;
+      position: fixed;
       font-size: 13.75em;
       font-weight: 900;
       font-style: italic;
