--- a/source/templates/partials/_medium.html.erb
+++ b/source/templates/partials/_medium.html.erb
@@ -9,7 +9,7 @@
     </svg>
     <span class="content">
       <%= image_tag "icons/medium/large.svg" %>
-      <span class="case-study">case study</span>
+      <span class="case-study"><%= t('about.caseStudy') %></span>
     </span>
   <% end %>
 </div>
