--- a/source/localizable/partials/homepage/_projects.html.erb
+++ b/source/localizable/partials/homepage/_projects.html.erb
@@ -1,3 +1,4 @@
+<meta itemprop="lastReviewed" content="<%= Time.now.strftime("%m/%d/%Y") %>" />
 <div id="projects">
   <div id="oh-my-pi">
     <h1 class="pi-title"><%= t('titles.projects') %></h1>
@@ -18,9 +19,12 @@
       </g>
     </svg>
   </div>
-  <ul id="projects-list">
-    <% data.projects.each do |project| %>
+  <ul id="projects-list" itemprop="breadcrumb" itemtype="http://schema.org/BreadcrumbList" itemscope>
+    <meta itemprop="numberOfItems" content="<%= data.projects.count %>" />
+    <% data.projects.each_with_index do |project, i| %>
       <% link_to proxy_url(project.slug), class: 'project', data: {'border-color': project.color, project: project.slug, 'project-image': project.cover} do %>
+        <meta itemprop="description" content="<%= project.description %>" />
+        <meta itemprop="name" content="<%= project.name %>" />
         <h2><%= project.name %></h2>
         <span class="show-more">
           <%= t('projects.show-more') %>
