header css bugfix and loader width on responsive

--- a/source/stylesheets/misc/_loader.scss
+++ b/source/stylesheets/misc/_loader.scss
@@ -22,6 +22,11 @@
       width: 0;
       transition: width .2s;
     }
+    @media #{$mediumPhone} {
+      svg {
+        max-width: 80%;
+      }
+    }
   }
   &.visible {
     display: block;
