Add description to homepage and about page

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -15,6 +15,7 @@
     <meta property="og:image" content="<%= config[:host] + data.meta.image %>" />
     <meta property="og:description" content="<%= description_translate %>" />
     <meta property="og:site_name" content="<%= data.meta.title %>" />
+    <meta property="og:app_id" content="<%= data.meta.facebook_id %>" />
 
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary_large_image">
