Fix socials blocked by ad-blockers and update meta image

--- a/source/localizable/about.html.erb
+++ b/source/localizable/about.html.erb
@@ -28,7 +28,7 @@ slug: about
     </div>
   </div>
 </div>
-<div class="socials">
+<div class="some-socials">
   <ul>
     <% data.pages.socials.each do |v, k| %>
       <li><%= link_to v, k, target: '_blank', itemprop: 'sameAs' %></li>
