--- a/source/localizable/partials/homepage/_intro.html.erb
+++ b/source/localizable/partials/homepage/_intro.html.erb
@@ -3,7 +3,7 @@
   <% t('homepage.intro').each do |p| %>
     <p><%= p %></p>
   <% end %>
-  <ul class="socials">
+  <ul class="some-socials">
     <% data.pages.socials.each do |k, v| %>
       <li><%= link_to k, v, target: '_blank' %></li>
     <% end %>
