Fix mockups under other browsers than chrome

--- a/source/templates/partials/_computer.html.erb
+++ b/source/templates/partials/_computer.html.erb
@@ -91,7 +91,7 @@
           </g>
           <g mask=url(#e5f414aa-2dc3-4e7e-beb9-c2665256ed3c<%= '-large' if large %>)>
             <g>
-              <image width="1618" height="1010" transform="translate(264 79)" xlink:href="<%= project_image_url(project, image) %>" style="isolation: isolate; height: auto;"/>
+              <image width="1618" height="1010" transform="translate(264 79)" viewBox="0 0 100 100" preserveAspectRatio="xMidYMin slice" xlink:href="<%= project_image_url(project, image) %>" style="isolation: isolate; height: auto;"/>
             </g>
           </g>
         </g>
