--- a/source/templates/partials/_iphone.html.erb
+++ b/source/templates/partials/_iphone.html.erb
@@ -31,7 +31,7 @@
             <polygon id="8b33ac99-9d69-4ed2-9ca7-64e219d1fe53" data-name="path-5" points="14 165 95 165 95 22 14 22 14 165" fill="#ecedf0"/>
           </g>
           <g mask="url(#7d282d52-0cc2-4433-a4d4-2583d34a8cac)">
-            <image width="751" height="1337" transform="translate(14 22) scale(0.10786 0.10845)" xlink:href="<%= project_image_url(project, image) %>" style="isolation: isolate"/>
+            <image width="751" height="1337" transform="translate(14 22) scale(0.10786 0.10845)" viewBox="0 0 100 100" preserveAspectRatio="xMidYMin slice" xlink:href="<%= project_image_url(project, image) %>" style="isolation: isolate"/>
           </g>
         </g>
       </g>
