Edit the default font by monospace instead of sans-serif

--- a/source/stylesheets/misc/_vars.scss
+++ b/source/stylesheets/misc/_vars.scss
@@ -5,7 +5,7 @@ $grey: #6B6B6B;
 $white: #FFF;
 $black: #404040;
 
-$font-primary: 'Menlo', 'Helvetica Neue', 'Helvetica', sans-serif;
+$font-primary: 'Menlo', 'Courier', monospace;
 
 $littlePhone: "screen and (max-width : 480px)";
 $mediumPhone: "screen and (max-width : 568px)";
