Edit jobs and some awesome other things :)

--- a/source/localizable/about.html.erb
+++ b/source/localizable/about.html.erb
@@ -9,7 +9,7 @@ slug: about
     <meta itemprop="name" content="IUT Bordeaux Montaigne"/>
   </span>
   <div class="presentation">
-    <h1>Bastien Robert <span>- développeur junior</span></h1>
+    <h1>Bastien Robert <span>- <%= t('about.job') %></span></h1>
     <% t('about.text').each do |p| %>
       <p><%= markdown p %></p>
     <% end %>
