Refork PI image way to load

--- a/source/localizable/partials/homepage/_projects.html.erb
+++ b/source/localizable/partials/homepage/_projects.html.erb
@@ -8,7 +8,7 @@
       </defs>
       <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(-46.000000, -399.000000)">
         <g transform="translate(46.000000, 399.000000)">
-          <g>
+          <g class="pi-image-parent">
             <mask id="mask-2" fill="white">
               <use xlink:href="#path-1"></use>
             </mask>
